--- a/app/assets/stylesheets/index.less
+++ b/app/assets/stylesheets/index.less
@@ -206,7 +206,12 @@ body, h1, h2, h3, h4, h5, h6 {
 .call-to-action, .jumbotron .btn {
   border: 0;
   border-radius: 0px;
-  padding: 20px 60px;
+  padding: 14px 40px;
+  margin: 20px 10px;
+}
+
+.white, .white:hover, .white:active {
+  color: white;
 }
 
 #number-hidden {
