--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -40,15 +40,16 @@ html(lang='en')
             li
               a(href='/login') Login
             li
-              a(href='/request-key') Request Beta Key
+              a(href='/signup') Signup
 
     #top.jumbotron
       .container
-        h1 Discover new connections
+        h1 Connect your ideas
         p#button-container
-          a#create.btn.btn-primary.btn-lg.call-to-action(href="/request-key") Make a Cograph
-          a#open.btn.btn-info.btn-lg.call-to-action(href="/request-key") Explore Cographs
-
+          a#create.btn.btn-primary.btn-lg.call-to-action(href="/signup") Make a Cograph
+          a#open.btn.btn-info.btn-lg.call-to-action(href="/explore") Explore Cographs
+        p
+          a.white(href="/will/document/0") See an Example
     .container.main-content
       .row
         .col-md-12
