--- a/app/public/footer.jade
+++ b/app/public/footer.jade
@@ -7,6 +7,6 @@ footer
       | &nbsp;&nbsp;&nbsp;&nbsp;
       a(href='/login') Login
       | &nbsp;&nbsp;&nbsp;&nbsp;
-      a(href='/request-key') Request Beta Key
+      a(href='/signup') Signup
       | &nbsp;&nbsp;&nbsp;&nbsp;
       a(href='mailto:hello@cograph.co') Contact
