add will's bio and photo

--- a/app/public/about.jade
+++ b/app/public/about.jade
@@ -27,12 +27,14 @@ html(lang='en')
             p David is a Computer Science and Philosophy student at Oxford who enjoys going to hackathons and all things web development. He focuses on the front end and enjoys the occasional dabble in design. 
         .col-md-6(src='')
           center
-            img.img-circle(src='http://placehold.it/200x200')
+            img.img-circle(src='assets/images/will.png')
             br
             br
             h2 Will Zeng
             hr
-            p Write your bio    
+            p Will is a doctoral student in Computer Science at Oxford where he is working on frameworks for quantum algorithms. He is a rower who probably reads too much and wonders with this quote from Musil: "A man who wants the truth becomes a scientist; a man who wants to give free play to his subjectivity may become a writer; but what should a man do who wants something in between?"
+            p
+              a(href='https://twitter.com/wjzeng') @wjzeng
     if isAuthenticated
       include footer-logged-in
     else 
