add thumbnail examples to explore page

--- a/app/public/explore.jade
+++ b/app/public/explore.jade
@@ -23,28 +23,33 @@ html(lang='en')
           .row
             .col-md-4
               .thumbnail
-                img(data-src='holder.js/300x300', alt='...')
+                img(src='assets/images/owid.png')
                 .caption
-                  h3 Thumbnail label
-                  p ...
+                  h3 Our World in Data
+                  p 
+                    | Cographs can give you a new way to share data visualizations. 
+                    a(href='http://www.cograph.co/max') @max 
+                    | has created a cograph with charts of economic trends from his site: 
+                    a(href='http://www.cograph.co/max') ourworldindata.org. 
+                    | Go ahead and explore his visualizations, connect your own comments and ideas, and share them.
                   p
-                    a.btn.btn-default(href='#', role='button') Button
+                    a.btn.btn-default(href='http://www.cograph.co/max/document/113', role='button') Our World in Data
             .col-md-4
               .thumbnail
-                img(data-src='holder.js/300x300', alt='...')
+                img(src='assets/images/wasteland.png')
                 .caption
-                  h3 Thumbnail label
-                  p ...
+                  h3 The Wasteland
+                  p Use cographs to make annotations.  This example starts with the first part of The Wasteland and connects in some information from its footnotes.  You can add you reactions, notes, and comments to the poem to this cograph and share them with friends and classmates.
                   p
-                    a.btn.btn-default(href='#', role='button') Button
+                    a.btn.btn-default(href='http://www.cograph.co/will/document/30', role='button') The Wasteland
             .col-md-4
               .thumbnail
-                img(data-src='holder.js/300x300', alt='...')
+                img(src='assets/images/relatedprojects.png')
                 .caption
-                  h3 Thumbnail label
-                  p ...
+                  h3 Projects related to Cograph
+                  p Cographs are great as collaborative suggestion boxes.  Use this cograph to let us know what other projects cograph reminds you of.  Don't forget to include information in the connection to explain the relationship.
                   p
-                    a.btn.btn-default(href='#', role='button') Button
+                    a.btn.btn-default(href='http://www.cograph.co/will/document/198', role='button') Projects related to Cograph
           hr
           h4 All Published Cographs
           br
