--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -40,7 +40,7 @@ html(lang='en')
             li
               a(href='/login') Login
             li
-              a(href='/signup') Signup
+              a(href='/signup') Beta Signup
 
     #top.jumbotron
       .container
