add link to wasteland wiki in explore page

--- a/app/public/explore.jade
+++ b/app/public/explore.jade
@@ -39,7 +39,9 @@ html(lang='en')
                 img(src='assets/images/wasteland.png')
                 .caption
                   h3 The Wasteland
-                  p Use cographs to make annotations.  This example starts with the first part of The Wasteland and connects in some information from its footnotes.  You can add you reactions, notes, and comments to the poem to this cograph and share them with friends and classmates.
+                  p Use cographs to make annotations.  This example starts with the first part of 
+                    a(href='http://en.wikipedia.org/wiki/The_Waste_Land') The Wasteland 
+                    | and connects in some information from its footnotes.  You can add your reactions, notes, and comments to the poem to this cograph and share them with friends and classmates.
                   p
                     a.btn.btn-default(href='http://www.cograph.co/will/document/30', role='button') The Wasteland
             .col-md-4
