changed position of example, changed homepage button size

--- a/app/public/footer.jade
+++ b/app/public/footer.jade
@@ -5,6 +5,8 @@ footer
     p.pull-right
       a(href="http://www.twitter.com/thecograph") @thecograph
       | &nbsp;&nbsp;&nbsp;&nbsp;
+      a(href="/about") Team
+      | &nbsp;&nbsp;&nbsp;&nbsp;
       a(href='/login') Login
       | &nbsp;&nbsp;&nbsp;&nbsp;
       a(href='/signup') Signup
