--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -48,8 +48,6 @@ html(lang='en')
         p#button-container
           a#create.btn.btn-primary.btn-lg.call-to-action(href="/signup") Make a Cograph
           a#open.btn.btn-info.btn-lg.call-to-action(href="/explore") Explore Cographs
-        p
-          a.white(href="/will/document/0") See an Example
     .container.main-content
       .row
         .col-md-12
@@ -61,9 +59,9 @@ html(lang='en')
           h3.full-size
             strong Cographs put information in context.
           br
-          h3 Popular Cographs
-          h3.full-size
-            strong Coming soon.
+          br
+          center
+            a.btn-warning.btn-lg.btn(href="/will/document/0") See an Example
           br
       hr
       h3.header-titles What can I do with Cograph?
