--- a/app/public/nav.jade
+++ b/app/public/nav.jade
@@ -20,3 +20,5 @@ nav.navbar.navbar-default#main-nav(role='navigation')
         ul.nav.navbar-nav.navbar-right
           li
             a(href="/login") Login
+          li
+            a(href="/signup") Beta Signup
