--- a/app/assets/stylesheets/index.less
+++ b/app/assets/stylesheets/index.less
@@ -9,7 +9,7 @@
   font-size: 16px;
 }
 .main-content strong {
-  color: #aaa;
+  color: #999;
 }
 #button-container {
  margin-top: 60px; 
@@ -110,8 +110,6 @@ body, h1, h2, h3, h4, h5, h6 {
 }
 .jumbotron .btn {
   box-shadow: 1px 1px 3px #000;
-  font-size: 1.2em;
-  font-weight: bold;
   padding: 0.3em 2.5em 0.5em;
 }
 .jumbotron .btn .glyphicon {
