--- a/app/public/footer-logged-in.jade
+++ b/app/public/footer-logged-in.jade
@@ -5,6 +5,8 @@ footer
     p.pull-right
       a(href="http://www.twitter.com/thecograph") @thecograph
       | &nbsp;&nbsp;&nbsp;&nbsp;
+      a(href="/about") Team
+      | &nbsp;&nbsp;&nbsp;&nbsp;
       a(href='/logout') Logout
       | &nbsp;&nbsp;&nbsp;&nbsp;
       a(href='mailto:hello@cograph.co') Contact
