change exlore button in navbar to link to the /explore page

--- a/app/public/nav.jade
+++ b/app/public/nav.jade
@@ -12,7 +12,7 @@ nav.navbar.navbar-default#main-nav(role='navigation')
       #gdocs-nav.collapse.navbar-collapse
         ul.nav.navbar-nav.navbar-right
           li
-            a(href="/") Explore
+            a(href="/explore") Explore
           li
             a(href="/#{user.local.nameLower}") @#{user.local.name}
     else
