--- a/app/assets/stylesheets/graph.less
+++ b/app/assets/stylesheets/graph.less
@@ -495,6 +495,26 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
   }
 }
 
+#description {
+  position:absolute;
+  width:320px;
+  z-index: 1;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-top: none;
+  border-left: none;
+  background: rgba(255, 255, 255, 0.94);
+  z-index: @controls-z-index;
+  padding-right: 5px;
+  section {
+    margin-left: 55px;
+    padding: 8px;
+    font-size: 12px;
+  }
+  i:hover {
+    color: @selected-color;
+  }
+}
+
 
 // Bootstrap-colorpalette
 
