small QOL changes

--- a/app/public/errors/missingDocument.jade
+++ b/app/public/errors/missingDocument.jade
@@ -7,10 +7,11 @@ head
     link(href='/assets/stylesheets/general.css', rel='stylesheet')  
     base(href='/')
   html
-    body(style='text-align: center; font-size: 24px;font-family:helvetica, sans-serif;')
-      br
-      h1 404 Whoops
-      br
-      div Sorry, the document you are trying to reach is unavailable!
-      br
-      a(href='/') Return to Cograph
+    body
+      center
+        br
+        h1 404 Whoops
+        br
+        div Sorry, the document you are trying to reach is unavailable!
+        br
+        a(href='/') Return to Cograph
