--- a/app/public/about.jade
+++ b/app/public/about.jade
@@ -9,27 +9,22 @@ html(lang='en')
     link(href='assets/stylesheets/custom-bootstrap-theme.css', rel='stylesheet')
     link(href='assets/stylesheets/general.css', rel='stylesheet')
     link(href='/assets/stylesheets/nav.css', rel='stylesheet')
+    link(href='assets/stylesheets/team.css' rel='stylesheet')
   body
     include nav
     .container.main-content
       center
         h4 The Team
-      br
-      br
       .row
         .col-md-6
           center
             img.img-circle(src='assets/images/david.png')
-            br
-            br
             h2 David Furlong
             hr
             p David is a Computer Science and Philosophy student at Oxford who enjoys going to hackathons and all things web development. He focuses on the front end and enjoys the occasional dabble in design. 
         .col-md-6(src='')
           center
             img.img-circle(src='assets/images/will.png')
-            br
-            br
             h2 Will Zeng
             hr
             p Will is a doctoral student in Computer Science at Oxford where he is working on frameworks for quantum algorithms. He is a rower who probably reads too much and wonders with this quote from Musil: "A man who wants the truth becomes a scientist; a man who wants to give free play to his subjectivity may become a writer; but what should a man do who wants something in between?"
