changed font to Lato

--- a/app/assets/stylesheets/graph.less
+++ b/app/assets/stylesheets/graph.less
@@ -11,7 +11,8 @@
 @data-tooltip-color: rgba(0,31,63,0.8);
 @controls-z-index: 1;
 @max-z: 99999999;
-@font: 'Gotham Light', Helvetica, sans-serif;
+
+@font: 'Lato Light', Helvetica, sans-serif;
 @bottom-margin: 60px;
 
 //
