--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -48,20 +48,22 @@ html(lang='en')
         p#button-container
           a#create.btn.btn-primary.btn-lg.call-to-action(href="/signup") Make a Cograph
           a#open.btn.btn-info.btn-lg.call-to-action(href="/explore") Explore Cographs
+        p 
+          a(href="http://github.com/willzeng/cograph")
+            img(src="assets/images/Github-Mark-Light-32px.png") 
+            span(id="github") Contribute on Github
     .container.main-content
       .row
         .col-md-12
           h3 What are Cographs?
-          h3.full-size
-            strong Cographs are webs of ideas that you can create, explore and publish.
+          h3.full-size Cographs are webs of ideas that you can create, explore and publish.
           br
           h3 Why should I use cographs?
-          h3.full-size
-            strong Cographs put information in context.
+          h3.full-size Cographs put information in context.
           br
           br
           center
-            a.btn-warning.btn-lg.btn(href="/will/document/0") See an Example
+            a.btn.btn-primary.btn-lg.call-to-action(href="/will/document/0") See an Example
           br
       hr
       h3.header-titles What can I do with Cograph?
