--- a/app/assets/stylesheets/general.less
+++ b/app/assets/stylesheets/general.less
@@ -3,7 +3,7 @@
 @import "font";
 
 @import "colors";
-@font: 'Gotham Light', Helvetica, sans-serif;
+@font: 'Lato Light', Helvetica, sans-serif;
 
 body {
 	font-family: @font, sans-serif;
