--- a/app/assets/stylesheets/index.less
+++ b/app/assets/stylesheets/index.less
@@ -1,7 +1,7 @@
 @import "font";
 
 .main-content {
-  font-family: 'Gotham Light';
+  font-family: 'Lato Light';
   padding-top: 20px;
 }
 .main-content h3:not(.full-size) {
@@ -22,7 +22,7 @@ body {
   font-size: 14px;
 }
 body, h1, h2, h3, h4, h5, h6 {
-  font-family: 'Gotham', helvetica, sans-serif;
+  font-family: 'Lato Light', helvetica, sans-serif;
   font-weight: normal;
 }
 #top h1 {
@@ -46,17 +46,22 @@ body, h1, h2, h3, h4, h5, h6 {
   padding: 0.3em 0;
   margin: 20px 0;
   border: 0;
-  font-family: 'Gotham','Varela Round', helvetica, sans-serif;
+  font-family: 'Lato','Varela Round', helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 .navbar .navbar-brand {
   color: #fff;
   font-weight: bold;
-  font-family: 'Gotham Light';
+  font-family: 'Lato Light';
   font-size: 30px;
   text-shadow: 0px 0px 2px #000;
   letter-spacing: -3px;
+}
+
+#github {
+  margin-left: 10px;
+  color: white;
 }
 
 #index-dropdown {
@@ -73,7 +78,7 @@ body, h1, h2, h3, h4, h5, h6 {
 }
 
 .full-size {
-  font-family: 'Gotham Thin', 'Gotham Light';
+  color: #999;
 }
 
 .navbar-right {
@@ -138,12 +143,12 @@ body, h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
   font-size: 20px;
   color: #333;
-  font-family: 'Gotham Light', sans-serif;
+  font-family: 'Lato Light', sans-serif;
 }
 
 .benefit p, .sizable {
   font-size: 18px;
-  font-family: 'Gotham Light', sans-serif;
+  font-family: 'Lato Light', sans-serif;
 }
 
 .sizable a {
@@ -262,7 +267,7 @@ footer a:hover {
   color: black;
   padding: 30px 80px;
   text-transform: uppercase;
-  font-family: 'Gotham Thin', sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 
 .brand-logo {
