add links to about page

--- a/app/public/about.jade
+++ b/app/public/about.jade
@@ -30,6 +30,11 @@ html(lang='en')
             p Will is a doctoral student in Computer Science at Oxford where he is working on frameworks for quantum algorithms. He is a rower who probably reads too much and wonders with this quote from Musil: "A man who wants the truth becomes a scientist; a man who wants to give free play to his subjectivity may become a writer; but what should a man do who wants something in between?"
             p
               a(href='https://twitter.com/wjzeng') @wjzeng
+      br
+      p With the help of our
+        a(href='https://github.com/willzeng/cograph/graphs/contributors') contributors
+        |and the inspiration of many others that we're glad to
+        a(href='https://github.com/willzeng/cograph/wiki/Acknowledgements') acknowledge.
     if isAuthenticated
       include footer-logged-in
     else 
