--- a/app/assets/stylesheets/index.less
+++ b/app/assets/stylesheets/index.less
@@ -12,7 +12,7 @@
   color: #999;
 }
 #button-container {
- margin-top: 60px; 
+ margin-top: 40px; 
 }
 hr {
   border-top: 1px solid #ddd;
@@ -183,16 +183,19 @@ body, h1, h2, h3, h4, h5, h6 {
 }
 
 #top {
+  margin: 0;
+  padding: 0;
+  padding-bottom: 50px;
   background: transparent;
   color: white;
 }
 
 #canvas-container {
   overflow: hidden;
-  height: 550px;
+  height: 580px;
   width: 100%;
   position: absolute;
-  top: 0;
+  top: -150px;
   padding: 0;
   margin: 0;
   z-index: -1;
