--- a/app/assets/stylesheets/index.less
+++ b/app/assets/stylesheets/index.less
@@ -199,6 +199,7 @@ body, h1, h2, h3, h4, h5, h6 {
   padding: 0;
   margin: 0;
   z-index: -1;
+  background: black;
 }
 
 #canvas-container canvas {
