--- a/app/assets/stylesheets/index.less
+++ b/app/assets/stylesheets/index.less
@@ -200,6 +200,10 @@ body, h1, h2, h3, h4, h5, h6 {
   margin: 0;
   z-index: -1;
   background: black;
+
+  video {
+    min-width: 100%;
+  }
 }
 
 #canvas-container canvas {
