--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -9,7 +9,7 @@ html(lang='en')
     link(href='assets/stylesheets/index.css', rel='stylesheet')
   body
     #canvas-container.jumbotron
-      video(autoplay loop poster="assets/images/cograph-frame.jpeg")
+      video(autoplay loop poster="assets/images/cograph.png")
         source(src="assets/images/cograph.mp4" type="video/mp4")
     
     nav.navbar.navbar-default.navbar-inverse(role='navigation')
