--- a/app/public/graph-content-edit.jade
+++ b/app/public/graph-content-edit.jade
@@ -12,8 +12,8 @@ block content
       .navbar-right.navbar-form
         form#add-node-form.form-inline
           #add.contracted
-            textarea#add-title(name="name", placeholder='New node', rows='1')
-            textarea#add-description(name="description", placeholder='Description - Use #tags @people +connect', rows='1')
+            textarea#add-title(name="name", placeholder='Type here to add a note', rows='1')
+            textarea#add-description(name="description", placeholder='Add description - Use #tags @people +connect', rows='1')
             #add-toolbar.cf
               #add-toolbar-left
                 button#add-color.color-circle(type="button")
