fixed ratio embed which has a height

--- a/app/assets/stylesheets/graph.less
+++ b/app/assets/stylesheets/graph.less
@@ -794,6 +794,10 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
     display: none;
   }
 
+  #brand-icon {
+    display: inline;
+  }
+
   .navbar-form {
     padding: 0;
   }
