--- a/app/assets/stylesheets/nav.less
+++ b/app/assets/stylesheets/nav.less
@@ -1,18 +1,22 @@
 // This stylesheet provides the navigation styles across
 // the site.
 
-
 .main-nav {
   padding: 0;
   border: 0;
 }
 
-#brand-logo {
+#brand-logo, #brand-icon {
   height: 50px;
   margin-top: -15px;
   margin-right: 10px;
   margin-left: -5px;
 }
+
+#brand-icon {
+  display: none;
+}
+
 .navbar-default:not(.navbar-transparent) {
   border-bottom: 0;
 }
