--- a/app/public/graph-nav.jade
+++ b/app/public/graph-nav.jade
@@ -8,6 +8,7 @@ nav.navbar.navbar-default(role='navigation')
             span.icon-bar
           a.navbar-brand(href='/')
             img#brand-logo(src="/assets/images/brand-b.png")
+            img#brand-icon(src="/assets/images/logo-black.png")
           
         span.navbar-doc-title
           if !isOwner
