--- a/app/assets/stylesheets/graph.less
+++ b/app/assets/stylesheets/graph.less
@@ -790,6 +790,10 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
     }
   }
 
+  #description {
+    width: 110px;
+  }
+
   #brand-logo {
     display: none;
   }
