--- a/app/assets/stylesheets/nav.less
+++ b/app/assets/stylesheets/nav.less
@@ -6,7 +6,7 @@
   border: 0;
 }
 
-#brand-logo, #brand-icon {
+#brand-logo {
   height: 50px;
   margin-top: -15px;
   margin-right: 10px;
@@ -15,6 +15,8 @@
 
 #brand-icon {
   display: none;
+  height: 35px;
+  margin-top: -10px;
 }
 
 .navbar-default:not(.navbar-transparent) {
