small duplicate css id on different pages fix

--- a/app/templates/graph_settings.html
+++ b/app/templates/graph_settings.html
@@ -1,5 +1,9 @@
-<h6>Cograph Name</h6>
-<input id="menu-title" type="text" placeholder="Untitled Doc" value="<%=name%>" />
+<form>
+  <div class="form-group">
+    <label for="settings-menu-title">Cograph Name</label>
+    <input id="settings-menu-title" class="form-control" type="text" placeholder="Untitled Doc" value="<%=name%>" />
+  </div>
+</form>
 <h6>Who can view it</h6>
 <a class="public-button-view clickable" title="who can see this graph"></a>
 <div class="btn-group btn-group-justified">
