add screencast embed to landing page

--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -49,6 +49,10 @@ html(lang='en')
     .container.main-content
       .row
         .col-md-12
+          center
+            iframe(width="560" height="315" src="https://www.youtube.com/embed/xUl9IdOwHDI" frameborder="0" allowfullscreen)
+      .row
+        .col-md-12
           h3 What are Cographs?
           h3.full-size Cographs are webs of ideas that you can create, explore and publish.
           br
