--- a/app/assets/stylesheets/graph.less
+++ b/app/assets/stylesheets/graph.less
@@ -12,7 +12,7 @@
 @controls-z-index: 1;
 @max-z: 99999999;
 
-@font: 'Lato Light', Helvetica, sans-serif;
+@font: 'Lato', Helvetica, sans-serif;
 @bottom-margin: 60px;
 
 //
@@ -446,7 +446,7 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
 .public-button-view.selected, .public-button-edit.selected {
   background: @selected-color;
   color: white;
-  font-weight: bold;
+  font-weight: 700;
 }
 
 .clickable {
