--- a/app/assets/stylesheets/index-logged-in.less
+++ b/app/assets/stylesheets/index-logged-in.less
@@ -1,11 +1,11 @@
 @import "font";
 
 .navbar {
-  font-family: 'Lato Light';
+  font-weight: 300;
 }
 
 .main-content {
-  font-family: 'Lato Light';
+  font-weight: 300;
   padding-top: 20px;
 }
 
@@ -57,7 +57,7 @@ body, h1, h2, h3, h4, h5, h6 {
 }
 
 .full-size {
-  font-family: 'Lato Light';
+  font-weight: 300;
 }
 
 .jumbotron {
@@ -117,12 +117,12 @@ body, h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
   font-size: 20px;
   color: #333;
-  font-family: 'Lato Light', sans-serif;
+  font-weight: 300;
 }
 
 .benefit p, .sizable {
   font-size: 18px;
-  font-family: 'Lato Light', sans-serif;
+  font-weight: 300;
 }
 
 .sizable a {
@@ -267,5 +267,5 @@ footer a:hover {
   color: black;
   padding: 30px 80px;
   text-transform: uppercase;
-  font-family: 'Lato Thin', sans-serif;
+  font-weight: 100;
 }
