--- a/app/public/nav.jade
+++ b/app/public/nav.jade
@@ -21,4 +21,4 @@ nav.navbar.navbar-default#main-nav(role='navigation')
           li
             a(href="/login") Login
           li
-            a(href="/signup") Beta Signup
+            a(href="/signup") Signup
