--- a/app/assets/stylesheets/font.less
+++ b/app/assets/stylesheets/font.less
@@ -1,10 +1,5 @@
-
-@font-face {
-    font-family: 'Lato Thin';
-    src: url('http://fonts.googleapis.com/css?family=Lato:300');
-}
+@import url('http://fonts.googleapis.com/css?family=Lato:100,300,400,700');
 
 @font-face {
     font-family: 'Lato';
-    src: url('http://fonts.googleapis.com/css?family=Lato:400,700');
 }
