--- a/app/assets/stylesheets/general.less
+++ b/app/assets/stylesheets/general.less
@@ -3,10 +3,11 @@
 @import "font";
 
 @import "colors";
-@font: 'Lato Light', Helvetica, sans-serif;
+@font: 'Lato', Helvetica, sans-serif;
 
 body {
-	font-family: @font, sans-serif;
+	font-family: @font;
+  font-weight: 300;
 }
 
 // CLEARFIX
