--- a/app/assets/stylesheets/index.less
+++ b/app/assets/stylesheets/index.less
@@ -1,67 +1,75 @@
 @import "font";
 
 .main-content {
-  font-family: 'Lato Light';
+  font-family: 'Lato';
+  font-weight: 300;
   padding-top: 20px;
 }
+
+h1 {
+  color: #f2e244;
+  font-weight: 100;
+}
+
 .main-content h3:not(.full-size) {
   text-transform: uppercase;
   font-size: 16px;
 }
+
 .main-content strong {
-  color: #999;
+  color: #333;
+
 }
-#button-container {
- margin-top: 40px; 
-}
+
 hr {
   border-top: 1px solid #ddd;
 }
+
 body {
   -webkit-font-smoothing: antialiased;
   font-size: 14px;
 }
+
 body, h1, h2, h3, h4, h5, h6 {
-  font-family: 'Lato Light', helvetica, sans-serif;
+  font-family: 'Lato', helvetica, sans-serif;
   font-weight: normal;
 }
+
 #top h1 {
   text-transform: uppercase;
   font-size: 40pt;
   color: white;
   opacity: 0.9;
 }
+
 .btn {
   border-top: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 2px;
 }
+
 .brand-logo {
   height: 50px;
 }
-.container {
-  max-width: 1100px;
-}
+
 .navbar {
   background: transparent;
   padding: 0.3em 0;
   margin: 20px 0;
   border: 0;
-  font-family: 'Lato','Varela Round', helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 .navbar .navbar-brand {
   color: #fff;
-  font-weight: bold;
-  font-family: 'Lato Light';
+  font-weight: 300;
   font-size: 30px;
   text-shadow: 0px 0px 2px #000;
   letter-spacing: -3px;
 }
 
 #github {
-  margin-left: 10px;
-  color: white;
+  margin-left: 15px;
 }
 
 #index-dropdown {
@@ -75,6 +83,11 @@ body, h1, h2, h3, h4, h5, h6 {
 
 #index-dropdown a:hover {
   background: transparent;
+}
+
+.links {
+  font-weight: 700;
+  font-size: 16pt;
 }
 
 .full-size {
@@ -98,29 +111,10 @@ body, h1, h2, h3, h4, h5, h6 {
 .jumbotron {
   background: url(../images/noisy_net.png);
   color: #fff;
-  padding: 2em 0 10em;
+  padding: 1em 0 7em;
   text-align: center;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-.jumbotron h1 {
-  font-size: 3em;
-  font-weight: normal;
-}
-.jumbotron h2 {
-  font-size: 1.2em;
-  font-weight: normal;
-  line-height: 1.4em;
-  margin-bottom: 1.4em;
-}
-.jumbotron .btn {
-  box-shadow: 1px 1px 3px #000;
-  padding: 0.3em 2.5em 0.5em;
-}
-.jumbotron .btn .glyphicon {
-  margin-left: 0.2em;
-  position: relative;
-  top: 3px;
 }
 .sect-border {
   border-top: 1px dashed #d6d6d6;
@@ -143,12 +137,12 @@ body, h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
   font-size: 20px;
   color: #333;
-  font-family: 'Lato Light', sans-serif;
+  font-weight: 300;
 }
 
 .benefit p, .sizable {
   font-size: 18px;
-  font-family: 'Lato Light', sans-serif;
+  font-weight: 300;
 }
 
 .sizable a {
@@ -163,7 +157,7 @@ body, h1, h2, h3, h4, h5, h6 {
   margin-bottom: 10px;
 }
 .benefit .benefit-ball i {
-  font-size: 30pt;
+  font-size: 50pt;
   text-align: center;
   color: #f2e244;
   vertical-align: bottom;
@@ -214,13 +208,6 @@ body, h1, h2, h3, h4, h5, h6 {
   width: 100% !important;
 }
 
-.call-to-action, .jumbotron .btn {
-  border: 0;
-  border-radius: 0px;
-  padding: 14px 40px;
-  margin: 20px 10px;
-}
-
 .white, .white:hover, .white:active {
   color: white;
 }
@@ -228,10 +215,6 @@ body, h1, h2, h3, h4, h5, h6 {
 #number-hidden {
   font-size: 20px;
   margin-right: 5px;
-}
-
-.call-to-action.btn-default {
-  color: white;
 }
 
 footer {
@@ -252,12 +235,6 @@ footer a:hover {
   border-bottom: 2px solid white;
 }
 
-.call-to-demo:hover {
-  background: inherit;
-  color: inherit;
-  border: 1px solid #333;
-}
-
 .header-titles {
   text-align: center;
   margin: 80px 0 40px 0;
@@ -265,17 +242,6 @@ footer a:hover {
 
 .header-secondary {
   text-align: center;
-}
-
-.call-to-demo {
-  margin: 80px auto;
-  font-size: 24px;
-  background: transparent;
-  border: 1px solid black;
-  color: black;
-  padding: 30px 80px;
-  text-transform: uppercase;
-  font-family: 'Lato', sans-serif;
 }
 
 .brand-logo {
