fix example link to point to a tweet graph and slight change of text

--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -39,7 +39,7 @@ html(lang='en')
       .row 
         .col-md-6
           h1 Explore the graph of your tweets 
-          h3.white Annotate, Connect and build a landscape for your ideas
+          h3.white Annotate, Connect, and Share your tweets + notes + ideas
         .col-md-6
           center
             iframe(width="560" height="315" src="https://www.youtube.com/embed/xUl9IdOwHDI" frameborder="0" allowfullscreen)
@@ -94,7 +94,7 @@ html(lang='en')
               span(id="github") Open Source
         .col-md-4
           center
-            a(href="/will/document/0") See an Example
+            a(href="http://www.cograph.co/wjzeng/document/1916") See an Example
         .col-md-4
           center
             a(href="/signup") Signup
