update url link

--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -94,7 +94,7 @@ html(lang='en')
               span(id="github") Open Source
         .col-md-4
           center
-            a(href="http://www.cograph.co/wjzeng/document/1916") See an Example
+            a(href="/wjzeng/document/1916") See an Example
         .col-md-4
           center
             a(href="/signup") Signup
