initial setup, css conflicts to be resolved

--- a/app/assets/stylesheets/profile.less
+++ b/app/assets/stylesheets/profile.less
@@ -2,9 +2,11 @@ html {
     position: relative;
     min-height: 100%;
 }
-body {
+
+body { // body
     margin: 0 0 70px; /* bottom = footer height */
 }
+
 footer {
     position: absolute;
     left: 0;
