--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -5,5 +5,8 @@
 @import url( "custom-bootstrap-theme.css" );
 @import url( "general.css" );
 @import url( "nav.css" );
-@import url( "graph.css" );
-@import url( "../libs/feedback-bot/src/feedback.css" );
+@import url( "index.css" );
+@import url( "login.css" );
+@import url( "nav.css" );
+@import url( "profile.css" );
+@import url( "team.css" );
